--- a/Gangyebab/Gangyebab/Home/View/HomeViewController.xib
+++ b/Gangyebab/Gangyebab/Home/View/HomeViewController.xib
@@ -115,8 +115,8 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1EA-bA-yIO" userLabel="Todo View">
                                     <rect key="frame" x="0.0" y="270" width="393" height="369"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해야 할 일을 추가해 보세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSE-U1-6dh">
-                                            <rect key="frame" x="102.66666666666669" y="144.66666666666663" width="188" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해야 할 일을 추가해 주세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSE-U1-6dh">
+                                            <rect key="frame" x="102.33333333333333" y="144.66666666666663" width="188.66666666666669" height="20"/>
                                             <fontDescription key="fontDescription" name="omyu_pretty" family="omyu pretty" pointSize="20"/>
                                             <color key="textColor" name="stringColor1"/>
                                             <nil key="highlightedColor"/>
