--- a/Gangyebab/Gangyebab/Alert/View/CustomAlertViewController.xib
+++ b/Gangyebab/Gangyebab/Alert/View/CustomAlertViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,9 +19,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomAlertViewController" customModule="Gangyebab" customModuleProvider="target">
             <connections>
-                <outlet property="cancelButton" destination="EgZ-Qh-2vg" id="b9I-jk-C8q"/>
-                <outlet property="confirmButton" destination="tHY-uL-9pe" id="vWj-KB-okk"/>
+                <outlet property="generalButton" destination="EgZ-Qh-2vg" id="b9I-jk-C8q"/>
                 <outlet property="messageLabel" destination="Cbo-8X-6Pv" id="xSK-jn-dDT"/>
+                <outlet property="pointButton" destination="tHY-uL-9pe" id="vWj-KB-okk"/>
                 <outlet property="titleLabel" destination="lAR-8e-Z9v" id="pix-q3-aMd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -35,7 +36,7 @@
                     <color key="backgroundColor" name="gangyeBlack"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OCX-vT-kuc">
-                    <rect key="frame" x="50" y="341" width="293" height="170"/>
+                    <rect key="frame" x="50" y="344.66666666666669" width="293" height="163"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lAR-8e-Z9v">
                             <rect key="frame" x="20" y="30" width="28.333333333333329" height="20"/>
@@ -43,14 +44,14 @@
                             <color key="textColor" name="stringColor1"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어쩌고 저쩌고를 하시겠습니까?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cbo-8X-6Pv">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어쩌고 저쩌고를 하시겠습니까?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cbo-8X-6Pv">
                             <rect key="frame" x="20" y="60" width="200.66666666666666" height="18"/>
                             <fontDescription key="fontDescription" name="SOYO-Maple-Regular" family="SOYO Maple" pointSize="15"/>
                             <color key="textColor" name="stringColor1"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="fW4-k1-7ij">
-                            <rect key="frame" x="20" y="105" width="253" height="45"/>
+                            <rect key="frame" x="20" y="98" width="253" height="45"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EgZ-Qh-2vg">
                                     <rect key="frame" x="0.0" y="0.0" width="111.66666666666667" height="45"/>
@@ -93,9 +94,10 @@
                         <constraint firstItem="lAR-8e-Z9v" firstAttribute="leading" secondItem="OCX-vT-kuc" secondAttribute="leading" constant="20" id="LcK-Sj-Un9"/>
                         <constraint firstItem="lAR-8e-Z9v" firstAttribute="top" secondItem="OCX-vT-kuc" secondAttribute="top" constant="30" id="SkQ-Sl-7kx"/>
                         <constraint firstItem="Cbo-8X-6Pv" firstAttribute="leading" secondItem="OCX-vT-kuc" secondAttribute="leading" constant="20" id="Sox-Bp-mGj"/>
+                        <constraint firstItem="fW4-k1-7ij" firstAttribute="top" secondItem="Cbo-8X-6Pv" secondAttribute="bottom" constant="20" id="alC-tg-mjf"/>
                         <constraint firstAttribute="bottom" secondItem="fW4-k1-7ij" secondAttribute="bottom" constant="20" id="cDJ-fu-g0b"/>
                         <constraint firstItem="Cbo-8X-6Pv" firstAttribute="top" secondItem="lAR-8e-Z9v" secondAttribute="bottom" constant="10" id="fbj-dg-pXb"/>
-                        <constraint firstAttribute="height" constant="170" id="pfk-f7-PzT"/>
+                        <constraint firstAttribute="height" priority="250" constant="100" id="pfk-f7-PzT"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
