--- a/Gangyebab/Gangyebab/Home/View/Cell/TodoCollectionViewCell.xib
+++ b/Gangyebab/Gangyebab/Home/View/Cell/TodoCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,41 +17,44 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gTV-IL-0wX" customClass="TodoCollectionViewCell" customModule="Gangyebab" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="346" height="40"/>
+            <rect key="frame" x="0.0" y="0.0" width="346" height="52"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="346" height="40"/>
+                <rect key="frame" x="0.0" y="0.0" width="346" height="52"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="B1y-hc-FUV">
-                        <rect key="frame" x="10" y="11" width="326" height="18"/>
+                        <rect key="frame" x="10" y="17.666666666666668" width="326" height="17.000000000000004"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SX7-AS-bGQ" userLabel="Importance Color">
-                                <rect key="frame" x="0.0" y="0.0" width="5" height="18"/>
+                                <rect key="frame" x="0.0" y="0.0" width="5" height="17"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="5" id="PsM-He-gX0"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Qc-RF-VKx" userLabel="Content Label">
-                                <rect key="frame" x="10" y="0.0" width="41.666666666666664" height="18"/>
+                                <rect key="frame" x="10" y="0.0" width="41.666666666666664" height="17"/>
                                 <fontDescription key="fontDescription" name="SOYO-Maple-Regular" family="SOYO Maple" pointSize="15"/>
                                 <color key="textColor" name="stringColor1"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNo-HF-cez">
-                                <rect key="frame" x="56.666666666666657" y="0.0" width="269.33333333333337" height="18"/>
+                                <rect key="frame" x="56.666666666666657" y="0.0" width="269.33333333333337" height="17"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="54M-Sa-iWJ"/>
+                        </constraints>
                     </stackView>
                 </subviews>
             </view>
             <color key="backgroundColor" name="background1"/>
             <constraints>
-                <constraint firstItem="B1y-hc-FUV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="11" id="9lq-O2-xL3"/>
+                <constraint firstItem="B1y-hc-FUV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="17.5" id="9lq-O2-xL3"/>
                 <constraint firstItem="B1y-hc-FUV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Kin-kz-NiX"/>
-                <constraint firstAttribute="bottom" secondItem="B1y-hc-FUV" secondAttribute="bottom" constant="11" id="jCZ-Mz-GoC"/>
+                <constraint firstAttribute="bottom" secondItem="B1y-hc-FUV" secondAttribute="bottom" constant="17.5" id="jCZ-Mz-GoC"/>
                 <constraint firstAttribute="trailing" secondItem="B1y-hc-FUV" secondAttribute="trailing" constant="10" id="vhT-WR-zfy"/>
             </constraints>
             <size key="customSize" width="318" height="124"/>
